package com.example.utaste.ui;

import com.journeyapps.barcodescanner.CaptureActivity;
public class CaptureAct extends CaptureActivity{
}
